--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.matthieu-vergne</groupId>
 	<artifactId>multi-map</artifactId>
-	<version>2.0</version>
+	<version>2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Java MultiMap</name>
 	<description>Provides an interface and implementations of a Java structure able to map a key to several values at once. Initially inspired from the Apache MultiMap, it takes a different perspective where the generics should be fully used to properly constrain the types of the instances provided.</description>
@@ -13,7 +13,7 @@
 		<connection>scm:git:git://github.com/matthieu-vergne/multi-map.git</connection>
 		<developerConnection>scm:git:githubMatthieu:matthieu-vergne/multi-map.git</developerConnection>
 		<url>scm:git:git://github.com/matthieu-vergne/multi-map.git</url>
-	  <tag>multi-map-2.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<issueManagement>
